Feat: Add Raw Concrete Texture Bleed.